Fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -144,3 +144,6 @@ table.grid{
 margin-left: 21rem;
 
 }
+.hello{
+  margin-top: 7%;
+}
